--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "redux": "^5.0.1"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
