--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-file-base64": "^1.0.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.5"
   },
