--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@syncfusion/ej2-maps": "^24.1.41",
     "@syncfusion/ej2-react-maps": "^24.1.41",
     "axios": "^1.6.7",
