--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
@@ -29,7 +30,8 @@
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
