--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # VITE_API=https://backendteckzite.onrender.com
 # VITE_API=http://localhost:4001
 # VITE_API=https://54.210.221.152:4001
-VITE_API=https://3.223.116.134
+VITE_API=https://teckzitebackend-apr6.onrender.com
 
